<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogin">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_logo"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_let_s_start"
        android:backgroundTint="@color/blue_action_bar"
        >
        <ImageView
            android:id="@+id/iv_backButtonLogin"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/leaves"/>
    </androidx.cardview.widget.CardView>
    <TextView

        android:id="@+id/tv_let_s_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/let_s_start"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/_70sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_logo"
        />
    <TextView
        android:id="@+id/tv_welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:text="@string/welcome_message"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:lines="3"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_let_s_start"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_MobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginRight="@dimen/_14sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_message"
        >


        <TextView

            android:id="@+id/tv_mobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:elevation=".1dp"
            android:background="@drawable/text_view_background"
            android:text="Mobile Number"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/et_mobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:digits="0123456789"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:lines="1"
            android:maxLength="10"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:textColorHint="@color/gray_text"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/validate_MobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:textColor="#ff0000"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@+id/cl_MobileNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_GetOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="Get OTP"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/button_bg"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginRight="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@+id/cl_MobileNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_Need"
        />
    <TextView
        android:id="@+id/tv_Need"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Need quick help?"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/roboto_regular"
        android:drawableStart="@drawable/whatsapp_black"
        android:drawablePadding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/btn_GetOTP"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>