<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Location">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_logo"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_setLocation"
        android:backgroundTint="@color/blue_action_bar"
        >

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/leaves"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tv_setLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Set Your Location"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/_70sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_logo"
        />

    <TextView
        android:id="@+id/tv_locationMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:lines="1"
        android:text="@string/please_set_your_location_to_help_you_better"
        android:fontFamily="@font/roboto_regular"
        android:textAlignment="center"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_setLocation"
        tools:ignore="TextSizeCheck"
        tools:layout_editor_absoluteX="52dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_setLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginRight="@dimen/_14sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_locationMsg"
        >


        <TextView

            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:elevation=".1dp"
            android:background="@drawable/text_view_background"
            android:paddingHorizontal="@dimen/_4sdp"
            android:text="Set Your Location"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/et_setLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"

            android:drawableRight="@drawable/location_icon"
            android:fontFamily="@font/roboto_regular"
            android:hint="Type your location here"
            android:inputType="textCapWords"
            android:lines="1"
            android:maxLength="10"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:textColorHint="@color/gray_text"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/validate_setLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="*Enter your location"
        android:textSize="@dimen/_10sdp"
        android:textColor="#ff0000"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@+id/cl_setLocation"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/cl_setLocation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:id="@+id/ll_terms"
            android:weightSum="20"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_14sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
            <CheckBox
                android:layout_weight="2"
                android:id="@+id/cb_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cb_circle_bg"
                android:button="@android:color/transparent"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:id="@+id/tv_terms"
                android:layout_weight="18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:layout_gravity="center_vertical"
                android:text="@string/terms_of_service"
                android:textColor="@color/gray_text"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_setLocation"
                tools:ignore="TextSizeCheck"
                tools:layout_editor_absoluteX="52dp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_setNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/set_now"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/button_bg"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_5sdp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_notNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="CANCEL NOT NOW"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/button_bg_gray"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginVertical="@dimen/_15sdp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>