<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTP_Verification">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_logo"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/blue_action_bar"
        >

        <ImageView
            android:id="@+id/iv_close"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/leaves"/>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:id="@+id/iv_crossButton"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close"
        app:layout_constraintTop_toBottomOf="@id/cv_logo"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tv_otpMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_message"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_crossButton"
        />
    <TextView
        android:id="@+id/tv_mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:text="999998888"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/roboto_regular"
        android:lines="1"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_otpMessage"
        />
    <TextView
        android:id="@+id/tv_otpInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_42sdp"
        android:layout_marginRight="@dimen/_42sdp"
        android:text="@string/sent_message"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:lines="2"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_mobileNumber"
        />
    <LinearLayout
        android:weightSum="4"
        android:gravity="center_horizontal"
        android:id="@+id/ll_otpCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_otpInstruction">

        <EditText
            android:layout_weight="1"
            android:id="@+id/et_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/otp_edittext_background"
            android:gravity="center"
            android:hint="•"
            android:textSize="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:elevation="5dp"
            android:maxLength="1"
            android:inputType="number"
             android:textStyle="bold" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/et_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="•"
            android:textSize="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:elevation="5dp"
            android:maxLength="1"
            android:inputType="number"
            android:digits="0123456789"
            android:textStyle="bold"
            android:background="@drawable/otp_edittext_background"
            android:gravity="center"
            />
        <EditText
            android:layout_weight="1"
            android:id="@+id/et_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:elevation="5dp"
            android:hint="•"
            android:textSize="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:maxLength="1"
            android:inputType="number"
            android:digits="0123456789"
            android:textStyle="bold"
            android:background="@drawable/otp_edittext_background"
            android:gravity="center"
            />
        <EditText
            android:layout_weight="1"
            android:id="@+id/et_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:elevation="5dp"
            android:hint="•"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/_10sdp"
            android:maxLength="1"
            android:inputType="number"
            android:digits="0123456789"
            android:textStyle="bold"
            android:background="@drawable/otp_edittext_background"
            android:gravity="center"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/tv_resendOTP"
        android:visibility="gone"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:text="Resend OTP"
        android:fontFamily="@font/montserrat_regular"
        android:paddingRight="@dimen/_15sdp"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/green_button"
        android:lines="1"
        android:textAlignment="textEnd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_otpCode"
        />
    <TextView
        android:id="@+id/tv_wrongOTP"
        android:visibility="gone"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:text="*Please enter valid OTP"
        android:fontFamily="@font/montserrat_regular"
        android:paddingRight="@dimen/_15sdp"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/red_warning"
        android:lines="1"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_otpCode"
        />
    <TextView
        android:id="@+id/tv_otpAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:text="@string/didn_t_receive_the_sms"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:lines="1"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/ll_otpCode"
        />
    <LinearLayout
        android:id="@+id/ll_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_otpAgain"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Request new code in "
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:lines="1"
                android:textAlignment="center"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:lines="1"
                android:textAlignment="center"
                app:layout_constraintLeft_toRightOf="@+id/tv_request"
                app:layout_constraintTop_toTopOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_otpSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="Submit"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/button_bg"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginRight="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/ll_timer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>